    times per second, which used unncessary bandwidth when running git-annex
    over ssh etc.
  * Make --json and --quiet work when used with -J.
    Previously, -J override the other options.
  * addurl, get: Added --json-progress option, which adds progress
    objects to the json output.
  * Remove key:null from git-annex add --json output.

 -- Joey Hess <id@joeyh.name>  Thu, 08 Sep 2016 12:48:55 -0400

git-annex (6.20160907) unstable; urgency=medium

  * Windows: Handle shebang in external special remote program.
  * Fix formatting of git-annex-smudge man page, and improve mdwn2man.
    Thanks, Jim Paris.
  * examimekey: Allow being run in a git repo that is not initialized by
    git-annex yet.
  * Android: Fix disabling use of cp --reflink=auto, curl, sha224, and sha384.
  * Make --json and --quiet suppress automatic init messages, and any
    other messages that might be output before a command starts.
    Fixes a reversion introduced in version 5.20150727.
  * Assistant, repair: Filter out git fsck lines about duplicate file
    entries in tree objects.
  * get -J, sync --content -J: Download different files from different
    remotes when the remotes have the same costs.

 -- Joey Hess <id@joeyh.name>  Wed, 07 Sep 2016 11:12:11 -0400

git-annex (6.20160808) unstable; urgency=medium

  * metadata --json output format has changed, adding a inner json object
    named "fields" which contains only the fields and their values.
    This should be easier to parse than the old format, which mixed up
    metadata fields with other keys in the json object.
    Any consumers of the old format will need to be updated.
  * Added metadata --batch option, which allows getting, setting, deleting,
    and modifying metadata for multiple files/keys.
  * Added --branch option to copy, drop, fsck, get, metadata, mirror, move,
    and whereis commands. This option makes git-annex operate on files that
    are included in a specified branch (or other treeish).